--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "recharts": "^2.15.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
