--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -42,9 +41,9 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
-    "jspdf": "^2.5.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.475.0",
-    "next": "15.3.3",
+    "next": "^15.5.4",
     "next-themes": "^0.3.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
